@@ -718,6 +718,8 @@ reading the directory a number less than zero is returned, and
 <tt>errno</tt> has the reason; <tt>errno</tt> does not work
 under WIN32.
 
+<P>The name of directory always ends in a forward slash '/'.
+
 <P>The <tt>sort</tt> argument specifies a sort function to be used
 when on the array of filenames. The following standard sort functions
 are provided with FLTK:
